--- a/arinda_shiphura/public/css/form .css
+++ b/arinda_shiphura/public/css/form .css
@@ -1,5 +1,6 @@
     body {
-      font-family: Arial, sans-serif;
+      /* font-family: Arial, sans-serif; */
+      font-family: agency FB;
       background-color: #f5f5f5;
       display: flex;
       justify-content: center;
